--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<a href="/index.html">Home</a>
+<a href="index.html">Home</a>
     <h3>Ahmed</h3>
     <h3>Ahemd</h3>
     <h1>Sayed</h1>
