--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS tutorials</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <a href="about.html">about</a>
-    <h3>Ahmed </h3>
-    <h3>Ahmed </h3>
-    <h1>Header one</h1>
+    <h1>hey dude i'm main heading </h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti? Mollitia labore doloribus debitis,
+        perferendis omnis ipsa cumque quidem architecto similique est recusandae vero velit in ea fuga laudantium
+        veritatis totam excepturi voluptatem neque, nihil dolorum sunt iusto. Illo officiis quo commodi ullam animi vel
+        quidem dolor quaerat eligendi odit?
+    </p>
 </body>
 
 </html>
