--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>CSS tutorials</title>
     <link rel="stylesheet" href="style.css">
     <!-- google fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
 </head>
 
 <body>
